# pwmanager

./: README.md  pwmanager.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt
.github/workflows/: ci.yml
docs/: README.md  TESTING.md
pwmanager/: __init__.py  cli.py  crypto.py  datastore.py
pwmanager/gui/: __init__.py  dialogs.py  main_window.py  rounded_button.py  styles.py
pwmanager/gui/dialogs/: __init__.py  ask_passphrase.py  initial_config.py  migrate_dialog.py  password_dialog.py
tests/: __init__.py  conftest.py  test_crypto.py  test_datastore.py  test_pwmanager.py
